--- a/control-projects-backend/src/main/resources/application.properties
+++ b/control-projects-backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
 
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/final_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
+
+#drop all and recreate
+spring.jpa.hibernate.ddl-auto=create
