--- a/control-projects-backend/src/main/resources/application.properties
+++ b/control-projects-backend/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.show-sql=true
 
 #drop all and recreate
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+
