feature: add particpante

--- a/control-projects-backend/src/main/resources/application.properties
+++ b/control-projects-backend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.show-sql=true
 
 #drop all and recreate
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.sql.init.mode=always
 
 #swagger
 springdoc.swagger-ui.path=/swagger-ui.html
